@@ -53,7 +53,7 @@ Getting CommunityEngine Running
 6. Modify your environment.rb as indicated below:
 
 		## environment.rb should look something like this:
-		RAILS_GEM_VERSION = '2.2.2' unless defined? RAILS_GEM_VERSION
+		RAILS_GEM_VERSION = '2.3.2' unless defined? RAILS_GEM_VERSION
 		require File.join(File.dirname(__FILE__), 'boot')
 
         require 'desert'
@@ -222,9 +222,7 @@ Gotchas
 
 1. I get errors running rake! Error: (wrong number of arguments (3 for 1)
   - make sure you have the latest version of rake
-2. I get test errors after upgrading to Rails 2.2.2
-  - make sure you have upgraded to the latest Engines plugin, and modified your environment.rb to use Rails 2.2.2.
-3. When upgrading to Rails 2.3, make sure your `action_controller.session` key is called `:key`, instead of the old `:session_key`:
+2. When upgrading to Rails 2.3, make sure your `action_controller.session` key is called `:key`, instead of the old `:session_key`:
 
         config.action_controller.session = {
           :key => '_ce_session',
