@@ -132,6 +132,5 @@ end
 EnginesHelper::Assets.propagate if EnginesHelper.autoload_assets
  
 # # If the app is using Haml/Sass, propagate sass directories too
-# config.after_initialize do
-#   EnginesHelper::Assets.update_sass_directories
-# end
+# EnginesHelper::Assets.update_sass_directories
+
