@@ -28,13 +28,7 @@ namespace :community_engine do
       puts "There is no user with the e-mail '#{email}'."
     end
   end
-    
-  desc 'Move the community engine assets to application public directory'
-  task :mirror_public_assets => :environment do
-    # actually, no need to do anything here, the mere act of running rake mirrors the plugin assets for everything
-    # Engines::Assets.mirror_files_for(Rails.plugins[:community_engine])
-  end
-  
+      
   desc 'Test the community_engine plugin.'
   Rake::TestTask.new(:test) do |t|         
     t.libs << 'lib'
@@ -98,77 +92,6 @@ namespace :community_engine do
         end
       end
     end
-  end
-
-  desc 'load a bunch of test users RAILS_ENV= NUM_USERS='
-  task :load_test_users => [:environment]  do
-    ActiveRecord::Base.establish_connection(RAILS_ENV.to_sym)
-    num = ENV['NUM_USERS'] || 10000
-    puts "-- LOADING NUM_USERS: #{num}"
-    (0..num.to_i).each do |n|
-       printf "#{n}." if (n.remainder(100) == 0)
-       u= User.new(
-         :login=>"#{Time.now.to_i}.#{n}",
-         :password=>"standard",
-         :password_confirmation=>"standard",
-         :activated_at => Time.now.to_s(:db)
-       )
-
-       u.email = "#{Time.now.to_i}.#{n}@example.com"
-       u.save!
-    end
-    puts "" 
-  end
-
-  desc 'load a bunch of test posts RAILS_ENV= NUM_USERS='
-  task :load_test_posts=>[:environment]  do
-    ActiveRecord::Base.establish_connection(RAILS_ENV.to_sym)
-    users = User.find(:all, :limit => 10)
-    categories = Category.find(:all)
-
-    num = ENV['NUM_POSTS'] || 20000
-    puts "-- LOADING NUM_POSTS: #{num}"
-
-    (0..num.to_i).each do |n|
-       printf "#{n}." if (n.remainder(1000) == 0)
-
-       p = Post.new(
-       :title=>"This post is Awesome! #{n}",
-       :raw_post=> "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor      incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. body",
-       :post=> "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor      incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. body",
-       :user => users[rand(users.size-1)],
-       :category => categories[rand(categories.size-1)]
-          )
-          p.save!
-    end
-    puts "" 
-  end
-
-  desc 'load a bunch of test posts RAILS_ENV= NUM_USERS='
-  task :load_test_post_comments=>[:environment]  do
-    ActiveRecord::Base.establish_connection(RAILS_ENV.to_sym)
-    users = User.find(:all)
-    posts = Post.find(:all)
-
-    num = ENV['NUM_COMMENTS'] || 40000
-    puts "-- LOADING NUM_COMMENTS: #{num}"
-
-    (0..num.to_i).each do |n|
-       printf "#{n}." if (n.remainder(1000) == 0)
-
-       commentable = posts[rand(posts.size-1)]
-       user = users[rand(users.size-1)]
-
-       c = Comment.new(
-       :comment=> "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor      incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation Duis aute irure dolor in reprehenderit cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat ",
-       :commentable => commentable,
-       :commentable_type => commentable.class.to_s,
-       :recipient => commentable.owner,
-       :user => user
-          )
-          c.save!
-    end
-    puts "" 
   end
 
 end
