@@ -8,6 +8,7 @@
 * Rails 2.3 compatibility
 * RedCloth no longer required
 * fixed swfupload to work with 2.3 and use Rack middleware
+* use Desert plugin for code mixing and plugin migrations instead of Engines
 
 = 1.0.1
 * fixed error when cropping photos using file system storage
